--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Khon Kaen University has many outstanding places</p>
     <ul>
         <li>ศาลเจ้าพ่อมอดินแดง</li>
-        <li>พิพิธภัณฑ์ธรรมชาติวิทยา มข.</li>
+        <li>พิพิธภัณฑ์ธรรมชาติวิทยา มข</li>
         <li>อุโมงค์ต้นไม้</li>
     </ul>
     <p>Have you been in these places? If not, please do so. For More information, please <a href="https://www.kku.ac.th/" target="_blank">click</a></p>
